--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@use-gesture/react": "^10.3.1",
     "framer-motion": "^12.23.18",
     "gsap": "^3.13.0",
     "next": "15.5.3",
