--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
     "@use-gesture/react": "^10.3.1",
     "framer-motion": "^12.23.18",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.11",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
