--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.23.18",
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
+    "lottie-web": "^5.13.0",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
