--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
     "@use-gesture/react": "^10.3.1",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.23.18",
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
     "lottie-web": "^5.13.0",
     "next": "15.5.3",
+    "nodemailer": "^7.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0"
