--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
     "lottie-web": "^5.13.0",
-    "next": "15.5.3",
+    "next": "^15.5.7",
     "nodemailer": "^7.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
